feat: upgrade to JDK 25 with Gradle 9.6.1, refreshed dependencies